--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "macfly\\authclient\\": ""
+      "macfly\\authclient\\": "src/"
     }
   },
   "minimum-stability": "stable"
